--- a/app/css/style.css
+++ b/app/css/style.css
@@ -108,11 +108,13 @@ div.tableWrapper {
 #modelOutput,
 #schemaOutput,
 #schemaRawOutput,
-#descriptorOutput,
+#descriptorFieldOutput,
+#descriptorElementOutput,
+#descriptorTemplateOutput,
 #loggerOutput {
   min-width: 800px;
   width: 90%;
-  min-height: 700px;
+  min-height: 800px;
   height: 90%;
   padding: 5px;
   font-family: "Consolas", "Courier New", monospace;
