--- a/app/less/style.less
+++ b/app/less/style.less
@@ -134,10 +134,16 @@ div.tableWrapper {
   background-color: #eeeeee;
 }
 
-#modelOutput, #schemaOutput, #schemaRawOutput, #descriptorOutput, #loggerOutput {
+#modelOutput,
+#schemaOutput,
+#schemaRawOutput,
+#descriptorFieldOutput,
+#descriptorElementOutput,
+#descriptorTemplateOutput,
+#loggerOutput {
   min-width: 800px;
   width: 90%;
-  min-height: 700px;
+  min-height: 800px;
   height: 90%;
   padding: 5px;
   font-family: "Consolas", "Courier New", monospace;
